--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -22,4 +22,5 @@
         tag: "'v' + {{ build_number }}"
         build:
           path: "{{ (workspace, 'Dockerfile') | path_join }}"
+        source: build
         
