--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -19,7 +19,7 @@
     - name: Build docker image
       community.docker.docker_image:
         name: java_hello_world
-        tag: "'v' + {{ build_number }}"
+        tag: "v{{ build_number }}"
         build:
           path: "{{ (workspace, 'Dockerfile') | path_join }}"
         source: build
