modified ansible playbook

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -16,15 +16,11 @@
       community.docker.docker_login:
         username: "{{ dockerhub_username }}"
         password: "{{ dockerhub_password }}"
-    - name: 
-      debug:
-        var: workspace
-
-    # - name: Build docker image
-    #   community.docker.docker_image:
-    #     name: "java_hello_world:{{ build_number }}"
-    #     build:
-    #       path: "{{ workspace }}"
-    #     source: build
-    #     state: present
+    - name: Build docker image
+      community.docker.docker_image:
+        name: "java_hello_world:{{ build_number }}"
+        build:
+          path: "{{ workspace }}"
+        source: build
+        state: present
         
