--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -18,9 +18,11 @@
         password: "{{ dockerhub_password }}"
     - name: Build docker image
       community.docker.docker_image:
-        name: "java_hello_world:{{ build_number }}"
+        name: "java-hello-world:v{{ build_number }}"
         build:
           path: "{{ workspace }}"
         source: build
         state: present
+        push: true 
+        repository: kerracan/java-hello-world
         
