modified playbook to add latest tag to the image

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -23,6 +23,7 @@
           path: "{{ workspace }}"
         source: build
         state: present
-        push: true 
+        push: true
         repository: kerracan/java-hello-world
+        tag: latest
         
