--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -18,7 +18,7 @@
         password: "{{ dockerhub_password }}"
     - name: Build docker image
       community.docker.docker_image:
-        name: "java-hello-world:v{{ build_number }}"
+        name: "java-hello-world"
         build:
           path: "{{ workspace }}"
         source: build
