modified playbook for deployment

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -32,6 +32,6 @@
         ports:
           - "9090:8080"
         pull: True
-        state: present
+        state: started
         detach: true
                 
